-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

----------
>>>>>>>>>>>> NOTE: The old Jargon Gui, in org.sdsc.grid.gui, has been depracated, and will be removed in the release after this one <<<<<<<<<<
 
----------
Compatibility testing with IRODS2.3

----------
Beginning a 'first order' refactoring of Jargon, with an emphasis on breaking large classes into smaller, reusable components.
*extracted Tag processing in IRODSCommands to Tag
*created IRODSAvu and extracted AVU processing from ICommands
*broke up the IRODSCommands class into IRODSCommands and IRODSConnection, working towards further refactoring

----------
Fix admin_build.xml ANT script to automatically compile with debug when running code coverage

----------
Replaced 'hand made' logging with standard logging, best practice for integrating with other frameworks, such as fedorairods
* to adjust logging, consult the log4j.properties file in src/api, defaults to ERROR, can be set to DEBUG, INFO, WARN, ERROR
* this change supercedes the prior 'debug' conventions in Jargon

----------
Culled all TODO's and dead code, did mass format of source to bring it up to current standards.

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org
